--- a/src/pages/HomePage.scss
+++ b/src/pages/HomePage.scss
@@ -51,6 +51,8 @@
   border-radius: $border-radius_b;
   margin: 10px;
   padding: 5px 10px;
+  min-width: 36px;
+  min-height: 15px;
 } 
 .homepage-folder-title{
   @include mediumFont;
