--- a/src/partials/variables.scss
+++ b/src/partials/variables.scss
@@ -2,12 +2,14 @@ $black_a: #000000;
 $black_b: #4747476c;
 $black_c: #0000008F;
 $black_d: #00000052;
+$black_e: #ebebeb62;
 
 $white_a: #FFFFFF;
 $white_b: #F9F9F9;
 $white_c: #DDDDDD;
 
 $red_a: rgb(255, 0, 106);
+$green_a: rgb(10, 191, 0);
 
 $box-shadow_a:0px 4px 24px #00000014;
 
