--- a/src/components/ImagesGrid.scss
+++ b/src/components/ImagesGrid.scss
@@ -6,7 +6,7 @@
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 20px;
   margin: 10px auto;
-  @include fade-in-slow
+  @include fade-in-slow;
 }
 .imagesgrid-error-wrap{
   @include mediumFont;
@@ -33,12 +33,14 @@
   border-radius: $border-radius_a;
   box-shadow: $box-shadow_a;
   cursor: pointer;
+  @include fade-in-slow;
 }
 .imagesgrid-img-wrap img{
   object-fit: cover;
   width: 100% ;
   height: 100%;
 }
+
 @media screen and (max-width: 1300px) {
   .imagesgrid{
     grid-template-columns: 1fr 1fr 1fr;
