--- a/src/pages/HomePage.scss
+++ b/src/pages/HomePage.scss
@@ -11,7 +11,7 @@
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 20px;
   margin: 10 auto;
-  @include fade-in-slow
+  @include fade-in-slow;
 }
 .homepage-error-wrap{
   @include mediumFont;
@@ -37,10 +37,30 @@
   background-color: $white_a;
   box-shadow: $box-shadow_a;
   border-radius: $border-radius_a;
+  @include fade-in-slow;
+}
+.homepage-folder-delete{
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 20px;
+  height: 20px;
+  background-color: $black_d;
+  color: $white_a;
+  font-size: 18px;
+  border-radius: $border-radius_b;
+  padding: 5px;
+  text-align: center;
+  opacity: .4;
+  cursor: pointer;
+}
+.homepage-folder-delete:hover{
+  opacity: 1;
+  transition: .2s ease-in;
 }
 .homepage-img-wrap img {
   object-fit: cover;
-  width: 100% ;
+  width: 100%;
   height: 80%;
 } 
 .homepage-count-images{
@@ -59,6 +79,7 @@
   text-align: center;
   padding: 15px;
 }
+
 @media screen and (max-width: 1300px) {
     .homepage-content{
       grid-template-columns: 1fr 1fr 1fr;
