--- a/src/components/NewCategoryIco/NewCategoryIco.scss
+++ b/src/components/NewCategoryIco/NewCategoryIco.scss
@@ -1,7 +1,7 @@
-@import '../partials/variables.scss';
-@import '../partials/mixins.scss';
+@use '../../partials/variables.scss' as *;
+@use '../../partials/mixins.scss' as *;
 
-.addphotoico{
+.newcategoryico{
   height: 295px;
   width: 304px;
   background-color: $white_a;
@@ -10,19 +10,19 @@
   text-align: center;
   cursor: pointer;
 }
-.addphotoico-plus-ico{
+.newcategoryico-plus-ico {
   @include icoFont;
   padding-top: 110px;
   opacity: .4;
 }
-.addphotoico-text{
+.newcategoryico-text{
   @include mediumFont;
   padding-top: 10px;
 }
 
 @media screen and (max-width: 320px) {
-  .addphotoico {
+  .newcategoryico {
     width: 95vw;
     margin: auto;
   }
-}
+}  
